[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Lucas <wegzi.ramos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ferris-says = "0.1"
rocket = "0.4.5" 
mongodb = "1.1.0"
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
chrono = { version = "0.4", features = ["serde"] }


